# bankruptcy-parser

./: CHANGES.md  README.md  README.rst  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: lint.yml  tests.yml
bankruptcy/: __init__.py  fields.py  filters.py  parser.py  utils.py
test/: tests.py
