[tool.poetry]
name = "bankruptcy-parser"
version = "0.0.6"
description = ""
authors = ["Free Law Project bill@free.law"]

[tool.poetry.dependencies]
python = "^3.8"
pdfplumber = "^0.6.0"
Pillow = "^9.0.1"
PyPDF2 = "1.26.0"
sortedcontainers = "2.3.0"
Wand = "^0.6.7"
Jinja2 = "^3.0.3"
regex = "2020.11.13"
six = "^1.16.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
